cmp-gateway增加appid接口
